Fix image overflow in book cards

--- a/static/books/css/common.css
+++ b/static/books/css/common.css
@@ -739,11 +739,10 @@ h3 {
 }
 
 .book-image img {
-    filter: none;
-    max-height: 100%;
-    max-width: 100%;
+    width: 100%;
+    height: 100%;
     object-fit: contain;
-    /* Removed transition/transform */
+    display: block;
 }
 
 /* Overlay Removed */
